information and imgs

--- a/index.html
+++ b/index.html
@@ -14,28 +14,6 @@
 </head>
 
 <body class="color-change-5x">
-    <!-- Nav Bar-->
-    <nav class="navbar navbar-expand-lg bg-body-none">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Alice Paul</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 400px;">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Early life</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" >Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Nav Bar ENDS-->
     <div class="container">
         <!-- Header Section-->
         <div class="row m-3">
@@ -52,62 +30,69 @@
             <!-- Description -->
             <div
                 class="col-12 col-lg-6 my-3 my-lg-0 p-3 d-flex align-items-center text-center rounded-3  bg-dark-subtle">
-                <p class="DES">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, repudiandae. Explicabo
-                    expedita
-                    odit nemo distinctio id laborum dolores, illo quasi accusamus nam consectetur atque laboriosam ut
-                    iure quos qui blanditiis?</p>
+                <p class="DES">Alice Paul was a leading American suffragist and women's rights activist. Instrumental in the women's suffrage movement, she co-founded the National Woman's Party and played a pivotal role in securing the 19th Amendment in 1920, granting women the right to vote. Despite facing opposition and imprisonment, Paul's unwavering dedication left a lasting impact on women's rights.
+
+
+
+
+                </p>
             </div>
             <!-- Description End-->
         </div>
         <!-- Header Section END-->
         <div class="container">
 
-            <!-- Gallery -->
+            <!-- card -->
             <div class="row m-3">
-                <!-- Nov -->
+                <!-- 1 -->
                 <div class="col-12 col-lg-4 p-3 mb-2">
                     <div class="card">
-                        <img src="https://picsum.photos/800/600" class="card-img-top" alt="...">
+                        <img src="img/flag2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Early Life</h5>
+                            <p class="card-text">Born in 1885 into a Quaker family in Mount Laurel, New Jersey, Alice Paul was immersed in a household that valued education and social responsibility. After earning a biology degree from Swarthmore College in 1905, she pursued advanced studies in sociology and economics. Influenced by suffragists in England, Paul became a dedicated advocate for women's suffrage, laying the foundation for her impactful role in the American feminist movement..</p>
+                            <a href="#" class="btn btn-primary">check it out</a>
                         </div>
                     </div>
                 </div>
-                <!-- Nov END-->
-                <!-- Nov -->
+                <!-- 1 END-->
+                <!-- 2 -->
                 <div class="col-12 col-lg-4 p-3 mb-2">
                     <div class="card">
-                        <img src="https://picsum.photos/800/600" class="card-img-top" alt="...">
+                        <img src="img/We_demand2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            <h5 class="card-title">Achievements</h5>
+                            <p class="card-text">Alice Paul was a pivotal suffragist leader, co-founding the National Woman's Party and playing a crucial role in the successful campaign for the 19th Amendment in 1920, securing women's right to vote in the United States. Her unwavering dedication and strategic activism left an indelible mark on the history of women's rights.
+
+
+
+
+
+
+
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">check it out</a>
                         </div>
                     </div>
                 </div>
-                <!-- Nov END-->
-                <!-- Nov -->
+                <!-- 2 END-->
+                <!-- 3 -->
                 <div class="col-12 col-lg-4 p-3 mb-2">
                     <div class="card">
-                        <img src="https://picsum.photos/800/600" class="card-img-top" alt="...">
+                        <img src="img/sitting2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Fun Facts</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">check it out</a>
                         </div>
                     </div>
                 </div>
-                <!-- Nov END-->
+                <!-- 3 END-->
             </div>
-            <!-- Gallery END -->
+            <!-- card END -->
         </div>
         <!-- Footer -->
         <footer class="bg-light text-center text-white">
@@ -129,7 +114,7 @@
             <!-- Grid container -->
 
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            <div id='contact'class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2023 Copyright:
                 <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
             </div>
