--- a/index.html
+++ b/index.html
@@ -62,16 +62,7 @@
                         <img src="img/We_demand2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Achievements</h5>
-                            <p class="card-text">Alice Paul was a pivotal suffragist leader, co-founding the National Woman's Party and playing a crucial role in the successful campaign for the 19th Amendment in 1920, securing women's right to vote in the United States. Her unwavering dedication and strategic activism left an indelible mark on the history of women's rights.
-
-
-
-
-
-
-
-                                of the
-                                card's content.</p>
+                            <p class="card-text">Alice Paul was a pivotal suffragist leader, co-founding the National Woman's Party and playing a crucial role in the successful campaign for the 19th Amendment in 1920, securing women's right to vote in the United States. Her unwavering dedication and strategic activism left an indelible mark on the history of women's rights.</p>
                             <a href="#" class="btn btn-primary">check it out</a>
                         </div>
                     </div>
@@ -83,9 +74,7 @@
                         <img src="img/sitting2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Fun Facts</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
+                            <p class="card-text">Alice Paul, born in 1885, was a pioneering American suffragist. With three degrees, including a Ph.D. in Economics, she organized the first White House picket, played a crucial role in the 19th Amendment's passage, and drafted the Equal Rights Amendment in 1923. Co-founder of the National Woman's Party, Paul spent time in prison for her activism, leaving a lasting legacy in the fight for women's rights.</p>
                             <a href="#" class="btn btn-primary">check it out</a>
                         </div>
                     </div>
